--- a/jitpack.yml
+++ b/jitpack.yml
@@ -3,5 +3,5 @@ jdk:
 before_install:
   - ./scripts/prepareJitpackEnvironment.sh
 install:
-  - FILE="-Dfile=FILE_NAME.aar"
-  - mvn install:install-file $FILE -DgroupId=com.github.hieujames -DartifactId=VoipLibAndroid -Dversion=1.0.1 -Dpackaging=aar -DgeneratePom=true
+  - FILE="-Dfile=VoipLib-release.aar"
+  - mvn install:install-file $FILE -DgroupId=com.github.hieujames -DartifactId=VoipLibAndroid -Dversion=1.0.2 -Dpackaging=aar -DgeneratePom=true
