--- a/settings.gradle
+++ b/settings.gradle
@@ -15,6 +15,13 @@ dependencyResolutionManagement {
         flatDir {
             dirs 'VoipLib/libs'
         }
+        maven { url 'https://jitpack.io' }
+        maven { url 'https://repositoriesmitek.jfrog.io/artifactory/downloadrepo-libs-release/'
+            credentials {
+                username = "hieujames741@gmail.com"
+                password = "cmVmdGtuOjAxOjE3NTA3MzEwODI6UmNieUpyN2hBMzNaYU5OZ3d2N1BNTmlyUURU"
+            }
+        }
     }
 }
 
