--- a/VoipLib/build.gradle
+++ b/VoipLib/build.gradle
@@ -36,9 +36,9 @@ afterEvaluate {
         publishing.publications.create(variant.name, MavenPublication) {
             from components.findByName(variant.name)
 
-            groupId = "com.github.hieujames"
+            groupId = "io.build.phone"
             artifactId = "VoipLibAndroid"
-            version= "1.0.9"
+            version= "1.1.0"
         }
     }
 }
@@ -66,6 +66,8 @@ task androidSourceJar(type: Jar){
 
 dependencies {
     implementation(name: 'linphone-sdk-android-5.2.110', ext: 'aar')
+    implementation libs.retrofit
+    implementation libs.converter.gson
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
     implementation libs.material
