--- a/VoipLib/build.gradle
+++ b/VoipLib/build.gradle
@@ -36,9 +36,9 @@ afterEvaluate {
         publishing.publications.create(variant.name, MavenPublication) {
             from components.findByName(variant.name)
 
-            groupId = "io.build.phone"
+            groupId = "com.github.hieujames"
             artifactId = "VoipLibAndroid"
-            version= "1.1.0"
+            version= "1.1.1"
         }
     }
 }
