--- a/VoipLib/build.gradle
+++ b/VoipLib/build.gradle
@@ -10,7 +10,7 @@ android {
 
     defaultConfig {
         minSdk 26
-
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
     }
@@ -38,7 +38,7 @@ afterEvaluate {
 
             groupId = "com.github.hieujames"
             artifactId = "VoipLibAndroid"
-            version= "1.1.3"
+            version= "1.1.4"
         }
     }
 }
@@ -77,7 +77,7 @@ dependencies {
     // Init Local File Name
     implementation("androidx.media:media:1.2.0")
     implementation("com.google.code.gson:gson:2.8.9")
-    implementation("io.insert-koin:koin-android:2.2.2")
+    implementation(libs.koin.android)
     implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.4.0")
     implementation("androidx.lifecycle:lifecycle-process:2.5.0")
 }
