--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,8 @@
 [versions]
 agp = "8.3.0"
 gradle = "7.1.3"
+koinAndroid = "2.2.2"
+koinCore = "3.5.6"
 kotlin = "1.7.10"
 coreKtx = "1.13.0"
 junit = "4.13.2"
@@ -21,6 +23,8 @@ junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+koin-android = { module = "io.insert-koin:koin-android", version.ref = "koinAndroid" }
+koin-core = { module = "org.koin:koin-core", version.ref = "koinCore" }
 linphone-sdk-android = { module = "org.linphone.minimal:linphone-sdk-android", version.ref = "linphoneSdkAndroid" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
