--- a/VoipLib/build.gradle
+++ b/VoipLib/build.gradle
@@ -31,6 +31,19 @@ android {
     }
 }
 
+/*publishing {
+    publications { variant->
+        maven(MavenPublication) {
+            groupId = "com.github.hieujames"
+            artifactId = "VoipLibAndroid"
+            version= "1.1.5"
+        }
+    }
+    repositories {
+        mavenLocal()
+    }
+}*/
+
 afterEvaluate {
     android.libraryVariants.each { variant->
         publishing.publications.create(variant.name, MavenPublication) {
@@ -38,7 +51,7 @@ afterEvaluate {
 
             groupId = "com.github.hieujames"
             artifactId = "VoipLibAndroid"
-            version= "1.1.4"
+            version= "1.1.5"
         }
     }
 }
